tests/ui/copy_from_ptr_requires_unsafe.stderr
error[E0133]: call to unsafe function `AVec::<T, A>::__copy_from_ptr` is unsafe and requires unsafe block
 --> tests/ui/copy_from_ptr_requires_unsafe.rs:4:10
  |
4 |     let _ = AVec::<u8>::__copy_from_ptr(1, core::ptr::null::<u8>(), 1);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior
